lib/libui/bottom_pane/snapshots/libui__bottom_pane__list_selection_view__tests__list_selection_narrow_width_preserves_rows.snap
---
source: lib/libui/bottom_pane/list_selection_view.rs
expression: "render_lines_with_width(&view, 24)"
---
                        
  Debug                 
                        
› 1. Item 1             
             xxxxxxxxx  
             x          
  2. Item 2             
             xxxxxxxxx  
             x          
  3. Item 3             
             xxxxxxxxx  
             x
